--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');
+
+* {
+  font-family: 'Roboto Mono', monospace;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+  background-color: #758E4F;
+}
+ol, ul {
+	list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  border-bottom: 2px solid #fff;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 32px;
+}
+
+.btn {
+  padding: 10px;
+  background-color: #33658A;
+  border: none;
+  color: #fff;
+  width: 150px;
+}
+
+.btn:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.homepage {
   display: flex;
   flex-direction: column;
+  margin: auto;
+  padding-top: 20px;
   align-items: center;
+}
+
+.homepage form {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 20px;
+}
+
+.homepage form label {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  margin-top: 20px;
+}
+
+.homepage form input {
+  padding: 10px;
+}
+
+.homepage form textarea {
+  padding: 10px;
+  resize: none;
+  height: 150px;
+}
+
+.resultspage {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 20px;
+}
+
+.resultspage h2, p {
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.resultspage h2 {
+  font-size: 32px;
+}
+
+.embedpage {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 60px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
